<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etName"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etLocation"
            android:hint="@string/hint_location"
            android:inputType="textPostalAddress"
            android:autofillHints="postalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etDate"
            android:hint="@string/hint_date"
            android:focusable="false"
            android:clickable="true"
            android:inputType="datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/swParking"
            android:text="@string/hint_parking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etLength"
            android:hint="@string/hint_length"
            android:inputType="numberDecimal"
            android:autofillHints="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etDifficulty"
            android:hint="@string/hint_difficulty"
            android:inputType="text"
            android:autofillHints="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etDescription"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"
            android:autofillHints="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save_hike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />
    </LinearLayout>
</ScrollView>
